# cam_serve

./: .gitignore  Cargo.toml  README.md  run-cam.bat  serve.bat  serve.py
src/: camera.rs  log_viewer.rs  main.rs  settings_app.rs  tray.rs
static/: demo.html
