[package]
name = "cam-stream"
version = "0.1.0"
edition = "2021"
description = "USB camera live stream to web browser"

[dependencies]
# Web 框架
axum = { version = "0.8", features = ["multipart", "ws"] }
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.6", features = ["cors"] }

# 摄像头捕获：直接用 Windows Media Foundation 原生 API
# （支持采集卡 + 摄像头；nokhwa 对采集卡格式协商有 bug）
windows = { version = "0.62", features = [
    "Win32_Foundation",
    "Win32_Media_MediaFoundation",
    "Win32_System_Com",
    "Win32_System_Variant",
] }

# 图像处理（RGB -> JPEG 编码）
image = { version = "0.25", default-features = false, features = ["jpeg"] }
bytes = "1"

# 序列化 & 工具
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"

# 异步通道 / 共享状态
parking_lot = "0.12"

# GUI / 系统托盘(Windows 桌面交互)
eframe = "0.31"
tray-icon = "0.24"
muda = "0.19"
crossbeam-channel = "0.5.16"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
